# cagibi

./: CMakeLists.txt  Changelog  README  TODO
daemon/: CMakeLists.txt  browser.cpp  cagibi.pc.cmake  cagibid.conf.cmake  control.cpp  control.h  controldbusadaptor.cpp  controldbusadaptor.h  daemon.cpp  daemon.h  dbuscodec.cpp  dbuscodec.h  device.cpp  device.h  device_p.cpp  device_p.h  devicedescription.cpp  devicedescription.h  devicedescriptionxmlhandler.cpp  devicedescriptionxmlhandler.h  devicelist.cpp  devicelist.h  devicelistdbusadaptor.cpp  devicelistdbusadaptor.h  icon.cpp  icon.h  icon_p.cpp  icon_p.h  main.cpp  org.kde.Cagibi.Control.xml  org.kde.Cagibi.DeviceList.xml  org.kde.Cagibi.conf  org.kde.Cagibi.conf.cmake  org.kde.Cagibi.service.cmake  org.kde.Cagibi.xml  org.kde.cagibi.service.cmake  org.kde.cagibi.xml  rootdevice.cpp  rootdevice.h  rootdevice_p.cpp  (+13 more)
